<resources>
    <string name="app_name">WebGados</string>

    <!-- Announcement List Item -->
    <string name="announcement_months_text">%1$s meses</string>
    <string name="announcement_arrobas_text">%1$s arrobas</string>
    <string name="announcement_coin_text">R$ %1$s</string>
    <string name="announcement_age_text">Idade</string>
    <string name="announcement_Weight_text">Peso</string>
    <string name="announcement_per_head_text">por cabeça</string>
    <string name="announcement_broker_text">Corretor %1$s</string>
    <string name="announcement_oxen_text">Você clicou em uma imagem de boi a venda</string>
    <string name="announcement_tiringa_text">Corretor Tiringa</string>

    <!-- Erro dialog messages -->
    <string name="no_internet_connection_error">Sem conexão com a internet. Tente novamente!</string>
    <string name="server_error">Ocorreu um erro em nossos servidores, tente mais tarde!</string>
    <string name="generic_error">Ocorreu um erro, tente mais tarde!</string>
    <string name="error_dialog_title">Erro!</string>
    <string name="error_dialog_positive_button_message">Tentar novamente</string>
    <string name="error_dialog_negative_button_message">Cancelar</string>

</resources>